--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -38,6 +38,10 @@ jobs:
       R_KEEP_PKG_SOURCE: yes
 
     steps:
+    - name: Install XQuartz on macOS
+        if: runner.os == 'macOS'
+        run: brew install xquartz --cask
+
       - uses: actions/checkout@v2
 
       - uses: r-lib/actions/setup-pandoc@v1
